Fixing styling overlap for album images

--- a/src/_sass/root.sass
+++ b/src/_sass/root.sass
@@ -18,7 +18,8 @@
     --dark-highlight: #002438
     --background-color: #1f1836
     --back-fill: #ff2f86
-    --accent: #FF2EFF
+    --accent: rgb(255, 46, 255)
+    --accent-transparent: rgba(255, 46, 255, 0.196)
     --dark-highlight-accent: #FFA3FF
     --link-color: #00E8DC
     --base-font-color: #E2F70F
