--- a/src/_sass/wrapper.sass
+++ b/src/_sass/wrapper.sass
@@ -1,4 +1,4 @@
 
 .wrapper
     padding: 10px
-    margin: 0
+    margin: 0 auto
